Trying to use SearchListFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
         <item>About</item>
     </string-array>
 
+    <string name="search_hint">Jose</string>
+    <string name="displaySearchEmployeesKey">displaySearchEmployeesKey</string>
+
 </resources>
